syntax = "proto3";

package pb;

import "user.proto";
// import "google/protobuf/timestamp.proto";
option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message CreateUserRequest {
    string username = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string role = 5;
    string dob = 6;
    string gender = 7;
    string location = 8;
    repeated string languages = 9;
    string ethnicity = 10;
    string phone_number = 11;
    string password = 12;
}

message CreateUserResponse {
    User user = 1;
    // string session_id = 2;
    // string access_token = 3;
    // string refresh_token = 4;
    // google.protobuf.Timestamp access_token_expires_at = 5;
    // google.protobuf.Timestamp refresh_token_expires_at = 6;
}